--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
+  
   <title>
     胡高新的网站
   </title>
+  
+  <meta name="baidu-site-verification" content="t3xDzHQ7N3" />
 </head>
 <body>
 one Test
